codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__agent_picker_item_description_age.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
00000000-0000-0000-0000-000000000113 • closed stale inactive finished • 12.3K used • 42s ago
00000000-0000-0000-0000-000000000113 • closed stale inactive finished • 12.3K used • 10m ago
00000000-0000-0000-0000-000000000113 • closed stale inactive finished • 3h ago
