codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__agent_picker_item_selected_description.snap
---
source: tui/src/multi_agents.rs
expression: description
---
gpt-5.4-mini medium • task: Investigate /agent picker metadata display • 00000000-0000-0000-0000-000000000114 • 120 used • approval: on-request • sandbox: workspace-write • reviewer: auto_review
