codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_agent_transcript.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
• Spawned Robie [explorer] (gpt-5 high)
  └ Compute 11! and reply with just the integer result.

• Sent input to Robie [explorer]
  └ Please continue and return the answer only.

• Waiting for Robie [explorer]

• Finished waiting
  └ Projected Robie [researcher]: Completed
    Bob [worker]: Errored
    Wait reason: Mailbox activity
    Wake cause: Mailbox turn requested
    Quiet queued updates: 1 (did not wake this wait)

• Closed Robie [explorer]
