codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_lifecycle_identity_without_cached_metadata.snap
---
source: tui/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Waiting on · primitive: wait_agent · Euclid [reviewer]
