codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_wait_mailbox.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
• Waiting on · primitive: wait_agent · Robie [explorer], Bob [worker]
  └ Robie [explorer]
    Bob [worker]

• Wake cause unavailable
  └ Robie [explorer]: Completed - 39916800
    Still pending: Bob [worker]
