codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_wait_partial_timeout.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
• Waiting via wait_agent · 2 agents
  └ Robie [explorer]
    Bob [worker]

• Waiting partially timed out
  └ Robie [explorer]: Completed - 39916800
    Pending: 00000000-0000-0000-0000-000000000003
