codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__picker_description_includes_compact_token_usage_when_present.snap
---
source: tui/src/multi_agents.rs
expression: snapshot
---
00000000-0000-0000-0000-000000000112 • closed stale inactive finished • 12.3K total • 9.8K in • 300 cached • 2.2K out
