codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__started_sub_agent_activity_missing_identity.snap
---
source: tui/src/multi_agents.rs
expression: "cell_to_text(&cell)"
---
• Started `/root/worker`
  └ Configured model: Unknown
  └ Configured reasoning effort: Unknown
